@@ -48,6 +48,8 @@ all (GUI):
 - TIFF support added (libtiff required and included in the distribution)
 - PCX files can now be written (24 bit only so far)
 
+- wxTextEntryDialog may be used for entering passwords (supports wxTE_PASSWORD)
+
 wxMSW:
 
 - support for enhanced metafiles added, support for copying/pasting metafiles
